--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -105,3 +105,7 @@ header
     text-shadow: 3px 0 15px rgba(0,0,0,0.3)
     font-size: 48px
 
+.error-message
+  color: red
+  margin-left: auto
+  margin-right: auto
